# 100-days-of-code

./: README.md
days/: day-00.md
days/day-01/: README.md
days/day-02/: README.md
days/day-03/: README.md
days/day-04/: README.md
days/day-04/hello-world-dinghy/: .dinghy.toml  Cargo.toml
days/day-05/: README.md
days/day-06/: README.md
days/day-07/: README.md
days/day-08/: README.md
days/day-08/nano-hello-world/: Cargo.toml
days/day-08/nano-hello-world/.cargo/: config
days/day-08/nano-hello-world/src/: main.rs
days/day-09/: README.md
